[tool.poetry]
name = "thingtalk"
version = "0.8.2"
description = "Web of Things framework, high performance, easy to learn, fast to code, ready for production"
authors = ["hidaris <zuocool@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hidaris/thingtalk"
repository = "https://github.com/hidaris/thingtalk"
documentation = "https://github.com/hidaris/thingtalk/blob/master/README.md"

license = "MPL-2.0"

keywords = ["web-of-things", "webthings", "iot"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hidaris/thingtalk/issues"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
ujson = "^5.1.0"
email_validator = "^1.1.1"
httpx = "^0.22.0"
pyee = "^9.0.0"
jsonschema = "^4.3.0"
ifaddr = "^0.1.7"
zeroconf = "^0.38.0"
loguru = "^0.6.0"
mkdocs-material = { version = "^8.0.0", optional = true }
async-cron = "^1.6.2"
gmqtt = "^0.6.9"
cached-property = { version = "^1.5", python = "~3.7"}

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.16.0"
requests = "^2.24.0"
black = {version = "^21.0b1", allow-prereleases = true}
pylint = "^2.7.4"

[tool.poetry.extras]
docs = ["mkdocs-material"]
