[tool.poetry]
name = "thingtalk"
version = "0.8.2"
description = "Web of Things framework, high performance, easy to learn, fast to code, ready for production"
authors = ["hidaris <zuocool@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hidaris/thingtalk"
repository = "https://github.com/hidaris/thingtalk"
documentation = "https://github.com/hidaris/thingtalk/blob/master/README.md"

license = "MPL-2.0"

keywords = ["web-of-things", "webthing", "iot"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hidaris/thingtalk/issues"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.87"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
orjson = "^3.8.1"
email_validator = "^1.1.1"
pyee = "^9.0.0"
jsonschema = "^4.17.0"
ifaddr = "^0.2.0"
zeroconf = "^0.39.0"
loguru = "^0.6.0"
mkdocs-material = { version = "^8.5.0", optional = true }
async-cron = "^1.6.2"
cached-property = { version = "^1.5", python = "~3.7"}

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.20.0"
httpx = "^0.23.0"

[tool.poetry.extras]
docs = ["mkdocs-material"]
